# auto-coding-v0-2

./: .env.example  .gitignore  pyproject.toml
docs/: AGENTIC_CODING_ARCHITECTURE.md  MIGRATION_FROM_V0_1.md  STAGE_REVIEW_SCOPE.md
src/auto_coding/: __init__.py  acceptance_auditor.py  adjudicator.py  archive_manager.py  audit_sample_builder.py  cli.py  codebook_freezer.py  codebook_refiner.py  (+43 more)
tests/: test_acceptance_auditor_v1.py  test_adjudicator_phase4.py  test_archive_manager_phase7.py  test_audit_sample_builder_v1_1.py  test_codebook_freezer_phase7.py  test_codebook_refiner_phase5.py  test_codebook_review.py  test_codebook_standardizer.py  test_coder_phase3.py  test_coder_training.py  test_consensus_builder_phase4.py  test_decision_log_phase4.py  test_deepseek_agent_v11.py  test_deepseek_audit_v11.py  test_deepseek_boundary_v11.py  test_deepseek_client_phase5.py  test_deepseek_coder_v11.py  test_deepseek_independence_v11.py  test_deepseek_optimizations_v11.py  test_disagreement_analysis_phase4.py  test_final_consensus_phase7.py  test_final_dataset_builder_phase7.py  test_formal_coding_manager_phase7.py  test_human_audit_validator_v11.py  test_parser.py  test_phase4_consistency_audit.py  test_phase6_round_transition.py  test_phase6_traceability.py  test_pilot_sample_review.py  test_pilot_sampler.py  test_prompt_renderer.py  test_recoding_planner_phase5.py  test_reliability_phase3.py  test_render_gate_v11.py  test_risk_profile_builder.py  test_round_controller_phase5.py  test_self_loop_runner_phase6.py  test_unit_table_validator.py  test_validation_metrics_v11.py
(+1 files in other folders)
