[project]
name = "auto-coding-v2"
version = "0.2.0"
description = "Agentic coding system for collaborative learning dialogue analysis"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
